--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <title>OrionVi.github.io</title>
+    <title>OrionVi.github.io!</title>
 <h1>Hello World</h1>
 <p>Im on progress</p>
 </body>
