--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     <a class="nav-link" href="#">Home🎫<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="commands.html">Commands😘</a>
+                    <a class="nav-link" href="./commands.html">Commands😘</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/join.html">Support Server💫</a>
+                    <a class="nav-link" href="./join.html">Support Server💫</a>
                 </li>
               
                 <li class="nav-item">
