--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css" />
-    <meta name="description" content="¡Es hora de deshacerte de algunos bots! Yuzo será tu mano derecha, brindándote increíbles posibilidades. Desde comandos que ayudarán a mantener la actividad, hasta comandos que te ayudarán en la administración u moderación en tu servidor."
+    <meta name="description" content="¡Es hora de deshacerte de algunos bots! xelS será tu mano derecha, brindándote increíbles posibilidades. Desde comandos que ayudarán a mantener la actividad, hasta comandos que te ayudarán en la administración u moderación en tu servidor."
     />
     <meta name="keywords" content="Discord bot, fun, moderation, configuration, español, ayuda, configuracion, moderación, juegos, diversión" />
     <meta name="author" content="Alan.#9295 (Usuario de Discord)" />
     <meta property="og:image" content="https://cdn.glitch.com/65bcf8e2-541c-4bff-941a-acc36f7332ce%2Fyuzo.png?v=1601875892627" />
     <script src="https://js.chargebee.com/v2/chargebee.js" type="38e398e541bf3a112ce2093e-text/javascript"></script>
-    <title>Yuzo</title>
+    <title>xelS</title>
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
         <div class="container">
-            <a class="navbar-brand" href="https://yuzobot.ga">
+            <a class="navbar-brand" href="https://bothouse.gq">
           <img
             src="https://cdn.glitch.com/65bcf8e2-541c-4bff-941a-acc36f7332ce%2Fyuzo.png?v=1601875892627"
             width="80"
             height="80"
-            alt="Yuzo Logo"
+            alt="xelS Logo"
           />
         </a>
             <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav nav ml-auto">
                     <li class="nav-item">
-                        <a href="https://yuzobot.ga" class="nav-link" id="home-nav"><span>Inicio</span></a
+                        <a href="https://bothouse.gq" class="nav-link" id="home-nav"><span>Inicio</span></a
               >
             </li>
             <li class="nav-item">
@@ -74,7 +74,7 @@
           <div class="col-lg-6 animate__animated animate__bounce">
             <div class="text">
               <span class="subheading">BOT DE <strong>DISCORD</strong></span>
-              <h1>Yuzo</h1>
+              <h1>xelS</h1>
               <p>
                 ¡Un bot multipropósitos en español con comandos de diversión,
                 moderación, configuración y mucho más!
@@ -89,7 +89,7 @@
                 ><img
                   src="https://cdn.glitch.com/65bcf8e2-541c-4bff-941a-acc36f7332ce%2FdiscordLogo.svg?v=1601875831377"
                   alt="Discord Logo"
-                  title="Logo de Yuzo"
+                  title="Logo de xelS"
                   style="margin-right: 15px;"
                 />AÑADIR A DISCORD</a
               >
@@ -103,7 +103,7 @@
             ><img
               class="landing-logo"
               src="https://cdn.glitch.com/65bcf8e2-541c-4bff-941a-acc36f7332ce%2Fyuzo.png?v=1601875892627"
-              alt="Yuzo Logo"
+              alt="xelS Logo"
           /></a>
             </div>
         </div>
@@ -121,9 +121,9 @@
                             <img src="https://cdn.discordapp.com/avatars/360565077956624386/58059129934ac1bef9acd35f16a6f9b8.png?size=128" alt="Alan" style="width: 100px;vertical-align: inherit;border-radius: 50%;" />
                             <div class="desc">
                                 <h3 class="mb-5" style="font-family: open sans,sans-serif;font-size: 23px;font-weight: 700;">
-                                    <strong>JainaGam3r45</strong>#7466
+                                    <strong>Hyuuh_0_0</strong>#5874
                                 </h3>
-                                <p>¡Desarrolladora de Yuzo!</p>
+                                <p>¡Desarrollador de xelS!</p>
                             </div>
                         </div>
                     </div>
@@ -132,9 +132,9 @@
                             <img src="https://cdn.discordapp.com/avatars/396058579582451713/67e508a8c5d29aad91847ebe1be05288.png?size=128" alt="Alan" style="width: 100px;vertical-align: inherit;border-radius: 50%;" />
                             <div class="desc">
                                 <h3 class="mb-5" style="font-family: open sans,sans-serif;font-size: 23px;font-weight: 700;">
-                                    <strong>Alan.</strong>#9295
+                                    <strong>Diablo Halow.</strong>#5405
                                 </h3>
-                                <p>¡Desarrollador de Yuzo!</p>
+                                <p>¡Desarrollador de xelS!</p>
                             </div>
                         </div>
                     </div>
@@ -165,7 +165,7 @@
                             <h2 class="ftco-heading-2">Elección</h2>
                             <ul class="list-unstyled">
                                 <li>
-                                    <a href="https://discordapp.com/oauth2/authorize?client_id=590183556740022272&scope=bot&permissions=8" target="_blank">Añadir a Yuzo</a
+                                    <a href="https://discordapp.com/oauth2/authorize?client_id=590183556740022272&scope=bot&permissions=8" target="_blank">Añadir a xelS</a
                   >
                 </li>
                 <li>
@@ -180,7 +180,7 @@
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Extra</h2>
               <ul class="list-unstyled">
-                <li><a href="https://yuzobot.ga">Créditos</a></li>
+                <li><a href="https://bothouse.gq">Créditos</a></li>
                             </ul>
                         </div>
                     </div>
@@ -192,7 +192,7 @@
                             <script type="38e398e541bf3a112ce2093e-text/javascript">
                                 document.write(new Date().getFullYear());
                             </script>
-                            Yuzo - Todos los derechos reservados.
+                            xelS - Todos los derechos reservados.
                         </p>
                     </div>
                 </div>
