--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
         <div class="container">
-            <a class="navbar-brand" href="https://bothouse.gq">
+            <a class="navbar-brand" href="#">
           <img
             src="https://cdn.glitch.com/65bcf8e2-541c-4bff-941a-acc36f7332ce%2Fyuzo.png?v=1601875892627"
             width="80"
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav nav ml-auto">
                     <li class="nav-item">
-                        <a href="https://bothouse.gq" class="nav-link" id="home-nav"><span>Inicio</span></a
+                        <a href="#" class="nav-link" id="home-nav"><span>Inicio</span></a
               >
             </li>
             <li class="nav-item">
@@ -118,7 +118,7 @@
                 <div class="row" style="justify-content: center;">
                     <div class="col-md-4 text-center d-flex ">
                         <div class="services-1 bg-light shadow-sm rounded">
-                            <img src="https://cdn.discordapp.com/avatars/360565077956624386/58059129934ac1bef9acd35f16a6f9b8.png?size=128" alt="Alan" style="width: 100px;vertical-align: inherit;border-radius: 50%;" />
+                            <img src="https://cdn.discordapp.com/avatars/756197752584798330/22356ed90adbde51fe3190335f56b345.webp?size=128" alt="Mi hermano xd" style="width: 100px;vertical-align: inherit;border-radius: 50%;" />
                             <div class="desc">
                                 <h3 class="mb-5" style="font-family: open sans,sans-serif;font-size: 23px;font-weight: 700;">
                                     <strong>Hyuuh_0_0</strong>#5874
@@ -180,7 +180,7 @@
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Extra</h2>
               <ul class="list-unstyled">
-                <li><a href="https://bothouse.gq">Créditos</a></li>
+                <li><a href="#">Créditos</a></li>
                             </ul>
                         </div>
                     </div>
