--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="icon" href="https://cdn.glitch.com/65bcf8e2-541c-4bff-941a-acc36f7332ce%2Fyuzo.png?v=1601875892627" />
+    <link rel="icon" href="https://cdn.discordapp.com/avatars/755871800646303804/3bd26c726aa5635c06d940ee6aaa6ad9.png?size=128" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/0cc17c1ede.js" crossorigin="anonymous" type="38e398e541bf3a112ce2093e-text/javascript"></script>
@@ -15,7 +15,7 @@
     />
     <meta name="keywords" content="Discord bot, fun, moderation, configuration, español, ayuda, configuracion, moderación, juegos, diversión" />
     <meta name="author" content="Alan.#9295 (Usuario de Discord)" />
-    <meta property="og:image" content="https://cdn.glitch.com/65bcf8e2-541c-4bff-941a-acc36f7332ce%2Fyuzo.png?v=1601875892627" />
+    <meta property="og:image" content="https://cdn.discordapp.com/avatars/755871800646303804/3bd26c726aa5635c06d940ee6aaa6ad9.png?size=128" />
     <script src="https://js.chargebee.com/v2/chargebee.js" type="38e398e541bf3a112ce2093e-text/javascript"></script>
     <title>xelS</title>
 </head>
@@ -25,7 +25,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
           <img
-            src="https://cdn.glitch.com/65bcf8e2-541c-4bff-941a-acc36f7332ce%2Fyuzo.png?v=1601875892627"
+            src="https://cdn.discordapp.com/avatars/755871800646303804/3bd26c726aa5635c06d940ee6aaa6ad9.png?size=128"
             width="80"
             height="80"
             alt="xelS Logo"
@@ -102,7 +102,7 @@
             id="mainlogo"
             ><img
               class="landing-logo"
-              src="https://cdn.glitch.com/65bcf8e2-541c-4bff-941a-acc36f7332ce%2Fyuzo.png?v=1601875892627"
+              src="https://cdn.discordapp.com/avatars/755871800646303804/3bd26c726aa5635c06d940ee6aaa6ad9.png?size=128"
               alt="xelS Logo"
           /></a>
             </div>
