--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             id="mainlogo"
             ><img
               class="landing-logo"
-              src="https://cdn.discordapp.com/avatars/755871800646303804/3bd26c726aa5635c06d940ee6aaa6ad9.png?size=128"
+              src="https://media.discordapp.net/attachments/755951872355074079/764855335864369163/gthr.png"
               alt="xelS Logo"
           /></a>
             </div>
