--- a/commands.html
+++ b/commands.html
@@ -33,8 +33,8 @@
     <li class="nav-item"><a href="/" class="nav-link" id="home-nav"><span>Inicio</span></a>
     </li>
     <li class="nav-item"><a href="comandos.html" class="nav-link active2" id="guides-nav"><span>Comandos</span></a></li>
-    <li class="nav-item"><a href="https://discord.gg/nb4bhHE" class="nav-link" target="_blank"><span>Mi soporte</span></a></li>
-    <li class="nav-item"><a href="https://top.gg/bot/590183556740022272/vote" class="nav-link" target="_blank" id="vote-nav"><span>Votar</span></a></li>
+    <li class="nav-item"><a href="https://discord.gg/24hAbYE" class="nav-link" target="_blank"><span>Mi soporte</span></a></li>
+    <li class="nav-item"><a href="https://top.gg/bot/755871800646303804/vote" class="nav-link" target="_blank" id="vote-nav"><span>Votar</span></a></li>
     </ul>
     </div>
     </div>
@@ -50,21 +50,21 @@
     <div class="col-md-3">
     <nav id="navi">
     <ul>
-    <li><a href="#información" class="">Información</a></li>
-    <li><a href="#útiles">Útiles</a></li>
-    <li><a href="#diversión">Diversión</a></li>
-    <li><a href="#reacción">Reacción</a></li>
-    <li><a href="#interacción">Interacción</a></li>
-    <li><a href="#imágenes">Imágenes</a></li>
-    <li><a href="#moderación">Moderación</a></li>
-    <li><a href="#administración">Administración</a></li>
+    <li><a href="#Bot" class="">Bot</a></li>
+    <li><a href="#Utility">Utility</a></li>
+    <li><a href="#Fun">Fun</a></li>
+    <li><a href="#Image">Reacción</a></li>
+    <li><a href="#Config">Config</a></li>
+    <li><a href="#Economy">Economy</a></li>
+    <li><a href="#Modercacion">Moderación</a></li>
+    <li><a href="#Image">Image</a></li>
     </ul>
     </nav>
     </div>
     <div class="col-md-9">
     <div id="información" class="page bg-light one">
-    <h2 class="heading">Información</h2>
-    <p></p><ul><li><strong>/stats</strong> | Obtén información técnica de xelS.</li> <li><strong>/botsuggestion</strong> | Envía una sugerencia utilizando a xelS. Al momento de enviar una sugerencia, asegúrate de que sea detallada lo más que se pueda para que sea tomada en cuenta. Envíos basuras no serán tomados en cuenta.</li> <li><strong>/commands [--nodm]</strong> | Obtén una lista completa de todos los comandos de Yuzo. </li> <li><strong>/donate</strong> | Muestra los métodos de donación que hay disponibles. (PD: Donar nos ayuda estar siempre en línea, y mejorar la calidad de Yuzo) (PD2: Recuerda tener los mensajes <strong>privados activados</strong>)</li> <li><strong>/help [comando]</strong> | Obtén una pequeña ayuda sobre mí, o la detallada información de algún comando.</li> <li><strong>/invite</strong> | Obtén mi invitación. (PD: Recuerda tener los mensajes <strong>privados activados</strong>)</li> <li><strong>/ping</strong> | Obtén la latencia de envíos de mensajes de Yuzo y de la API de Discord.</li> <li><strong>/server</strong> | Obtén la cantidad de servidores y la cantidad de usuarios que tengo registrados.</li><li><strong>/support</strong> | Obtén la invitación de mi soporte. Allí podrás conseguir ayuda más avanzada e información sobre mí.</li><li><strong>/vote</strong> | Vota por mí, en <strong>Discord Bots List</strong>! (PD: Votar nos ayuda a ser más conocidos)</li></ul><p></p>
+    <h2 class="heading">Bot</h2>
+    <p></p><ul><li><strong>/stats</strong> | Obtén información técnica de xelS.</li> <li><strong>/bugreport</strong> | Envía un bug utilizando a xelS. Al momento de enviar un bug, asegúrate de que sea detallado lo más que se pueda para que sea tomada en cuenta. Envíos basuras no serán tomados en cuenta.</li> <li><strong>/help</strong> | Obtén una lista completa de todos los comandos de xelS. </li> <li><strong>/donate</strong> | Muestra los métodos de donación que hay disponibles. (PD: Donar nos ayuda estar siempre en línea, y mejorar la calidad de xelS) (PD2: Recuerda tener los mensajes <strong>privados activados</strong>)</li> <li><strong>/help [comando]</strong> | Obtén una pequeña ayuda sobre mí, o la detallada información de algún comando.</li> <li><strong>/invite</strong> | Obtén mi invitación. (PD: Recuerda tener los mensajes <strong>privados activados</strong>)</li> <li><strong>/ping</strong> | Obtén la latencia de envíos de mensajes de xelS y de la API de Discord.</li> <li><strong>/serverinfo</strong> | Obtén la cantidad de servidores y la cantidad de usuarios que tengo registrados.</li><li><strong>/support</strong> | Obtén la invitación de mi soporte. Allí podrás conseguir ayuda más avanzada e información sobre mí.</li><li><strong>/vote</strong> | Vota por mí, en <strong>Discord Bots List</strong>! (PD: Votar nos ayuda a ser más conocidos)</li></ul><p></p>
     </div>
     <div id="útiles" class="page bg-light one">
     <h2 class="heading">Útiles</h2>
@@ -111,7 +111,7 @@
     <div class="ftco-footer-widget mb-4 ml-md-4">
     <h2 class="ftco-heading-2">Elección</h2>
     <ul class="list-unstyled">
-    <li><a href="https://discordapp.com/oauth2/authorize?client_id=590183556740022272&amp;scope=bot&amp;permissions=8" target="_blank">Añadir a Yuzo</a></li>
+    <li><a href="https://discordapp.com/oauth2/authorize?client_id=590183556740022272&amp;scope=bot&amp;permissions=8" target="_blank">Añadir a xelS</a></li>
     <li><a href="https://discord.gg/nb4bhHE" target="_blank">Entrar al soporte</a></li>
     </ul>
     </div>
@@ -129,7 +129,7 @@
     <div class="col-md-12 text-center">
     <p>
     Copyright ©
-    <script type="38e398e541bf3a112ce2093e-text/javascript">document.write(new Date().getFullYear());</script> Yuzo - Todos los derechos reservados.
+    <script type="38e398e541bf3a112ce2093e-text/javascript">document.write(new Date().getFullYear());</script> xelS - Todos los derechos reservados.
     </p>
     </div>
     </div>
