--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               >
             </li>
             <li class="nav-item">
-              <a href="/comandos.html" class="nav-link" id="guides-nav"
+              <a href="/commands.html" class="nav-link" id="guides-nav"
                 ><span>Comandos</span></a
               >
             </li>
