--- a/index.html
+++ b/index.html
@@ -121,18 +121,7 @@
                             <img src="https://cdn.discordapp.com/avatars/756197752584798330/22356ed90adbde51fe3190335f56b345.webp?size=128" alt="Mi hermano xd" style="width: 100px;vertical-align: inherit;border-radius: 50%;" />
                             <div class="desc">
                                 <h3 class="mb-5" style="font-family: open sans,sans-serif;font-size: 23px;font-weight: 700;">
-                                    <strong>Hyuuh_0_0</strong>#5874
-                                </h3>
-                                <p>¡Desarrollador de xelS!</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 text-center d-flex">
-                        <div class="services-1 bg-light shadow-sm rounded">
-                            <img src="https://cdn.discordapp.com/avatars/396058579582451713/67e508a8c5d29aad91847ebe1be05288.png?size=128" alt="Alan" style="width: 100px;vertical-align: inherit;border-radius: 50%;" />
-                            <div class="desc">
-                                <h3 class="mb-5" style="font-family: open sans,sans-serif;font-size: 23px;font-weight: 700;">
-                                    <strong>Diablo Halow.</strong>#5405
+                                    <strong>Diablo</strong>#5874
                                 </h3>
                                 <p>¡Desarrollador de xelS!</p>
                             </div>
