--- a/commands.html
+++ b/commands.html
@@ -28,7 +28,7 @@
   <ul class="navbar-nav nav ml-auto">
   <li class="nav-item"><a href="/" class="nav-link active2" id="home-nav"><span>Inicio</span></a>
   </li>
-  <li class="nav-item"><a href="comandos.html" class="nav-link active2" id="guides-nav"><span>Comandos</span></a></li>
+  <li class="nav-item"><a href="#" class="nav-link active2" id="guides-nav"><span>Comandos</span></a></li>
   <li class="nav-item"><a href="https://discord.gg/24hAbYE" class="nav-link" target="_blank"><span>Mi soporte</span></a></li>
   <li class="nav-item"><a href="https://top.gg/bot/755871800646303804/vote" class="nav-link" target="_blank" id="vote-nav"><span>Votar</span></a></li>
   </ul>
