--- a/commands.html
+++ b/commands.html
@@ -26,7 +26,7 @@
   </button>
   <div class="collapse navbar-collapse" id="ftco-nav">
   <ul class="navbar-nav nav ml-auto">
-  <li class="nav-item"><a href="/" class="nav-link active2" id="home-nav"><span>Inicio</span></a>
+  <li class="nav-item"><a href="/" class="nav-link" id="home-nav"><span>Inicio</span></a>
   </li>
   <li class="nav-item"><a href="#" class="nav-link active2" id="guides-nav"><span>Comandos</span></a></li>
   <li class="nav-item"><a href="https://discord.gg/24hAbYE" class="nav-link" target="_blank"><span>Mi soporte</span></a></li>
