--- a/commands.html
+++ b/commands.html
@@ -49,7 +49,7 @@
   <li><a href="#Bot" class="">Bot</a></li>
   <li><a href="#Utility">Utility</a></li>
   <li><a href="#Fun">Fun</a></li>
-  <li><a href="#Image">Reacción</a></li>
+  <li><a href="#Image">Image</a></li>
   <li><a href="#Config">Config</a></li>
   <li><a href="#Economy">Economy</a></li>
   <li><a href="#Modercacion">Moderación</a></li>
@@ -58,7 +58,7 @@
   </nav>
   </div>
   <div class="col-md-9">
-  <div id="información" class="page bg-light one">
+  <div id="Bot" class="page bg-light one">
   <h2 class="heading">Bot</h2>
   <p></p>• /hr
 • acerca de....
@@ -73,8 +73,8 @@
 • /stats
 • Muestra mis estadisticas<p></p>
   </div>
-  <div id="útiles" class="page bg-light one">
-  <h2 class="heading">Útiles</h2>
+  <div id="Utility" class="page bg-light one">
+  <h2 class="heading">Utility</h2>
   • /avatar
 • Muestra tu avatar o de quien menciones
 • /changelog
@@ -100,8 +100,8 @@
 • /userinfo
 • Info de un usuario
   </div>
-  <div id="diversión" class="page bg-light one">
-  <h2 class="heading">Diversión</h2>
+  <div id="Fun" class="page bg-light one">
+  <h2 class="heading">Fun</h2>
  • /8ball
 • Preguntame cualquier cosa y yo te responeré con un si o no
 • /batslap
@@ -135,8 +135,8 @@
 • /wtp
 • What is this pokemun?
   </div>
-  <div id="reacción" class="page bg-light one">
-  <h2 class="heading">Reacción</h2>
+  <div id="Image" class="page bg-light one">
+  <h2 class="heading">Image</h2>
  • /angry
 • Cuando estas enojado
 • /blush
@@ -170,7 +170,7 @@ I'm sad and low, yeah
 • /wallpaper
 • Te doy un wallpaer para otakus sin vida social
   </div>
-  <div id="interacción" class="page bg-light one">
+  <div id="Config" class="page bg-light one">
   <h2 class="heading">Config</h2>
 • /autoreply
 • Configura si deseas que responda a mensajes automaticamente
@@ -188,7 +188,7 @@ I'm sad and low, yeah
 • Configura la imagen de fondo de tu tarjeta de xp y tambien el color (opcional)
   </div>
   
-  <div id="moderación" class="page bg-light one">
+  <div id="Moderacion" class="page bg-light one">
   <h2 class="heading">Moderación</h2>
 • /ban
 • banea
