--- a/commands.html
+++ b/commands.html
@@ -53,7 +53,7 @@
   <li><a href="#Config">Config</a></li>
   <li><a href="#Economy">Economy</a></li>
   <li><a href="#Modercacion">Moderación</a></li>
-  <li><a href="#Image">Image</a></li>
+  <li><a href="#XD">XD</a></li>
   </ul>
   </nav>
   </div>
