--- a/commands.html
+++ b/commands.html
@@ -185,7 +185,7 @@
   <h2 class="ftco-heading-2">Elección</h2>
   <ul class="list-unstyled">
   <li><a href="https://discordapp.com/oauth2/authorize?client_id=590183556740022272&amp;scope=bot&amp;permissions=8" target="_blank">Añadir a xelS</a></li>
-  <li><a href="https://discord.gg/nb4bhHE" target="_blank">Entrar al soporte</a></li>
+  <li><a href="https://discord.gg/24hAbYE" target="_blank">Entrar al soporte</a></li>
   </ul>
   </div>
   </div>
