--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </li>
             <li class="nav-item">
               <a
-                href="https://discord.gg/nb4bhHE"
+                href="https://discord.gg/24hAbYE"
                 class="nav-link"
                 target="_blank"
                 ><span>Mi soporte</span></a
@@ -96,7 +96,7 @@
             </div>
           </div>
           <a
-            href="https://discord.gg/nb4bhHE"
+            href="https://discord.gg/24hAbYE"
             class="col-lg-6 landing-logo animate__slower"
             target="_blank"
             id="mainlogo"
@@ -158,7 +158,7 @@
                   >
                 </li>
                 <li>
-                  <a href="https://discord.gg/nb4bhHE" target="_blank"
+                  <a href="https://discord.gg/24hAbYE" target="_blank"
                     >Entrar al soporte</a
                   >
                 </li>
