--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="row" style="justify-content: center;">
                     <div class="col-md-4 text-center d-flex ">
                         <div class="services-1 bg-light shadow-sm rounded">
-                            <img src="https://cdn.discordapp.com/avatars/756197752584798330/22356ed90adbde51fe3190335f56b345.webp?size=128" alt="Mi hermano xd" style="width: 100px;vertical-align: inherit;border-radius: 50%;" />
+                            <img src="https://media.discordapp.net/attachments/757997786103808133/765172356641062922/tumblr_pw6oe3Nd2E1ypmzhso1_500.gif" alt="Mi hermano xd" style="width: 100px;vertical-align: inherit;border-radius: 50%;" />
                             <div class="desc">
                                 <h3 class="mb-5" style="font-family: open sans,sans-serif;font-size: 23px;font-weight: 700;">
                                     <strong>Diablo</strong>#5874
