--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <meta name="keywords" content="AlexFlipnote, Twitter, Developer, Github">
 
     <meta property="og:locale" content="en_GB" />
-    <link rel="canonical" href="https://alexflipnote.dev/" />
-    <meta property="og:url" content="https://alexflipnote.dev/" />
-    <meta property="og:site_name" content="AlexFlipnote" />
+    <link rel="canonical" href="https://www.bothouse.gq/" />
+    <meta property="og:url" content="https://www.bothouse.gq/" />
+    <meta property="og:site_name" content="BotHouse" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@AlexFlipnote" />
@@ -83,7 +83,7 @@
             <h3 class="title emerald-text"><i class="emoji alexcoffee"></i> Information:</h3>
             <div class="info-container">
                 <p>
-                    Hello, my name is <span class="emerald-text">Alex</span>, but known as <span class="emerald-text">AlexFlipnote</span> over the internet. I'm a Developer that spends time coding scripts and building websites. Been coding for around
+                    Hello, my name is <span class="emerald-text">Adri</span>, but known as <span class="emerald-text">Diablo</span> over the internet. I'm a Developer that spends time coding scripts and building websites. Been coding for around
                     <span class="sun-flower-text" id="years-of-coding">[INSERT TIME HERE, YES]</span> now and still on the road to learn more. Current coding languages I know fair enough are <span class="emerald-text">HTML, CSS, SCSS, JavaScript, Python</span>                    and <span class="emerald-text">SQL</span>.
                 </p>
             </div>
