--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="unset">
                         <h1 class="title monospace">AlexFlipnote</h1>
-                        <p class="undertitle monospace"><i class="emoji norway"></i> I do coding, yes.</p>
+                        <p class="undertitle monospace"><i class="emoji norway"></i>Happy... yes... ~happy...</p>
                     </div>
                 </section>
                 <div class="buttons">
