--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <img draggable="false" src="assets/images/profile.png" class="image-title">
                     </div>
                     <div class="unset">
-                        <h1 class="title monospace">AlexFlipnote</h1>
+                        <h1 class="title monospace">Diablo</h1>
                         <p class="undertitle monospace"><i class="emoji norway"></i>Happy... yes... ~happy...</p>
                     </div>
                 </section>
@@ -83,7 +83,7 @@
             <h3 class="title emerald-text"><i class="emoji alexcoffee"></i> Information:</h3>
             <div class="info-container">
                 <p>
-                    Hello, my name is <span class="emerald-text">Adri</span>, but known as <span class="emerald-text">Diablo</span> over the internet. I'm a Developer that spends time coding scripts and building websites. Been coding for around
+                    Hello, my name is <span class="non-text">Adri</span>, but known as <span class="emerald-text">Diablo</span> over the internet. I'm a Developer that spends time coding scripts and building websites. Been coding for around
                     <span class="sun-flower-text" id="years-of-coding">[INSERT TIME HERE, YES]</span> now and still on the road to learn more. Current coding languages I know fair enough are <span class="emerald-text">HTML, CSS, SCSS, JavaScript, Python</span>                    and <span class="emerald-text">SQL</span>.
                 </p>
             </div>
