--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
     <meta content="My personal homepage" name="description" />
 
     <meta name="revisit-after" content="2 days">
-    <meta name="keywords" content="AlexFlipnote, Twitter, Developer, Github">
+    <meta name="keywords" content="Diablospot, Twitter, Developer, Github">
 
     <meta property="og:locale" content="en_GB" />
-    <link rel="canonical" href="https://www.bothouse.gq/" />
-    <meta property="og:url" content="https://www.bothouse.gq/" />
-    <meta property="og:site_name" content="BotHouse" />
+    <link rel="canonical" href="https://www.diablospot.gq/" />
+    <meta property="og:url" content="https://www.diablospot.gq/" />
+    <meta property="og:site_name" content="DiabloSpot" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@AlexFlipnote" />
 
     <!-- CSS -->
-    <link href="https://modesta.alexflipnote.dev/css/modesta.css" type="text/css" rel="stylesheet">
+    <link href="assets/css/text.css" type="text/css" rel="stylesheet">
     <link href="assets/css/custom.css" type="text/css" rel="stylesheet">
 
     <!-- JavaScript -->
