--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <section class="container" id="information">
         <div class="box-container">
-            <h3 class="title emerald-text"><i class="emoji alexcoffee"></i> Information:</h3>
+            <h3 class="title non-text"><i class="emoji alexcoffee"></i> Information:</h3>
             <div class="info-container">
                 <p>
                     Hello, my name is <span class="non-text">Adri</span>, but known as <span class="emerald-text">Diablo</span> over the internet. I'm a Developer that spends time coding scripts and building websites. Been coding for around
@@ -90,7 +90,7 @@
         </div>
 
         <div class="box-container">
-            <h3 class="title emerald-text"><i class="emoji alexcoffee"></i> Projects:</h3>
+            <h3 class="title non-text"><i class="emoji alexcoffee"></i> Projects:</h3>
             <div class="info-container">
                 <p><a href="https://alexflipnote.dev/homepage/" target="_blank">AlexFlipnote/homepage</a>, website that can be used as a personal start page with clock and date.</p>
                 <p><a href="https://github.com/AlexFlipnote/CoffeeAPI" target="_blank">CoffeeAPI</a>, simple, yet powerful API providing random images.</p>
