--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         gtag('config', 'UA-52771679-1');
     </script>
 
-    <title>AlexFlipnote</title>
+    <title>Diablo - Page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
 
