ADDED TYPING TEST

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="theme-color" content="#14bae4">
     <meta content="https://alexflipnote.dev/assets/images/profile.png" property="og:image" />
     <link rel="icon" type="image/x-icon" href="https://alexflipnote.dev/assets/images/favicon.ico">
-    <meta content="AlexFlipnote" property="og:title" />
+    <meta content="Diablo" property="og:title" />
 
     <meta content="My personal homepage" property="og:description" />
     <meta content="My personal homepage" name="description" />
