--- a/type/index.html
+++ b/type/index.html
@@ -50,7 +50,7 @@
     </section>
     <div class="typing-test-container">
         <div class="title-container">
-            <a href="/languages" class="flag-emoji tooltip" data-tooltip="Select languages...">
+            <a href="/type/languages" class="flag-emoji tooltip" data-tooltip="Select languages...">
           <img src="https://twemoji.maxcdn.com/2/72x72/1f1fa-1f1f8.png">
         </a>
             <div class="intro-container">
