--- a/type/language/en-us.html
+++ b/type/language/en-us.html
@@ -26,9 +26,9 @@
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@AlexFlipnote">
 
-<link href="/assets/css/modesta.css" type="text/css" rel="stylesheet">
-<link href="/assets/css/custom.css" type="text/css" rel="stylesheet">
-<script src="/assets/js/main.js" type="text/javascript" charset="utf-8"></script>
+<link href="/type/assets/css/modesta.css" type="text/css" rel="stylesheet">
+<link href="/type/assets/css/custom.css" type="text/css" rel="stylesheet">
+<script src="/type/assets/js/main.js" type="text/javascript" charset="utf-8"></script>
     <title>Typing test</title>
     <meta content="https://twemoji.maxcdn.com/2/72x72/1f1fa-1f1f8.png" property="og:image">
     <link rel="icon" type="image/x-icon" href="https://twemoji.maxcdn.com/2/72x72/1f1fa-1f1f8.png">
@@ -44,7 +44,7 @@
 </section>
     <div class="typing-test-container">
       <div class="title-container">
-        <a href="/languages" class="flag-emoji tooltip" data-tooltip="Select languages...">
+        <a href="/type/languages" class="flag-emoji tooltip" data-tooltip="Select languages...">
           <img src="https://twemoji.maxcdn.com/2/72x72/1f1fa-1f1f8.png">
         </a>
         <div class="intro-container">
