--- a/type/language/fi.html
+++ b/type/language/fi.html
@@ -44,7 +44,7 @@
 </section>
     <div class="typing-test-container">
       <div class="title-container">
-        <a href="/languages" class="flag-emoji tooltip" data-tooltip="Valitse kieli...">
+        <a href="/type/languages" class="flag-emoji tooltip" data-tooltip="Valitse kieli...">
           <img src="https://twemoji.maxcdn.com/2/72x72/1f1eb-1f1ee.png">
         </a>
         <div class="intro-container">
