--- a/type/language/fr-fr.html
+++ b/type/language/fr-fr.html
@@ -26,9 +26,9 @@
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@AlexFlipnote">
 
-<link href="/assets/css/modesta.css" type="text/css" rel="stylesheet">
-<link href="/assets/css/custom.css" type="text/css" rel="stylesheet">
-<script src="/assets/js/main.js" type="text/javascript" charset="utf-8"></script>
+<link href="/type/assets/css/modesta.css" type="text/css" rel="stylesheet">
+<link href="/type/assets/css/custom.css" type="text/css" rel="stylesheet">
+<script src="/type/assets/js/main.js" type="text/javascript" charset="utf-8"></script>
     <title>Test de dactylographie</title>
     <meta content="https://twemoji.maxcdn.com/2/svg/1f1eb-1f1f7.svg" property="og:image">
     <link rel="icon" type="image/x-icon" href="https://twemoji.maxcdn.com/2/svg/1f1eb-1f1f7.svg">
@@ -44,7 +44,7 @@
 </section>
     <div class="typing-test-container">
       <div class="title-container">
-        <a href="/languages" class="flag-emoji tooltip" data-tooltip="Choisir une langue...">
+        <a href="/type/languages" class="flag-emoji tooltip" data-tooltip="Choisir une langue...">
           <img src="https://twemoji.maxcdn.com/2/svg/1f1eb-1f1f7.svg">
         </a>
         <div class="intro-container">
