--- a/type/language/fi.html
+++ b/type/language/fi.html
@@ -26,9 +26,9 @@
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@AlexFlipnote">
 
-<link href="/assets/css/modesta.css" type="text/css" rel="stylesheet">
-<link href="/assets/css/custom.css" type="text/css" rel="stylesheet">
-<script src="/assets/js/main.js" type="text/javascript" charset="utf-8"></script>
+<link href="/type/assets/css/modesta.css" type="text/css" rel="stylesheet">
+<link href="/type/assets/css/custom.css" type="text/css" rel="stylesheet">
+<script src="/type/assets/js/main.js" type="text/javascript" charset="utf-8"></script>
     <title>Kirjoitustesti</title>
     <meta content="https://twemoji.maxcdn.com/2/72x72/1f1eb-1f1ee.png" property="og:image">
     <link rel="icon" type="image/x-icon" href="https://twemoji.maxcdn.com/2/72x72/1f1eb-1f1ee.png">
