--- a/type/index.html
+++ b/type/index.html
@@ -55,7 +55,7 @@
         </a>
             <div class="intro-container">
                 <p class="title">Typing test
-                    <a href="/about"><svg width="22px" height="22px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"/></svg></a>
+                    <a href="/type/about"><svg width="22px" height="22px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"/></svg></a>
                     <span class="label sun-flower black-text" style="vertical-align: text-top; margin-top: 1.5em;">BETA</span>
                 </p>
 
