--- a/type/about.html
+++ b/type/about.html
@@ -64,7 +64,7 @@ gtag('config', 'UA-52771679-1');
 </ul>
 <h2>Contributors</h2>
 <ul>
-<li><a href="https://github.com/Bowser65">Bowser65</a> (Improving the word rendering and lag issues)</li>
+<li><a href="https://github.com/OrionVi">Ori</a> (Improving the word rendering and lag issues)</li>
 </ul>
 <h2>FAQ</h2>
 <p>Q: What does CPM and WPM mean?<br></p>
