forgot to put "/type" before langs

--- a/type/languages.html
+++ b/type/languages.html
@@ -78,13 +78,13 @@
                 </div>
                 
                 <div class="col-xs-3 select-lang">
-                    <a href="/language/nb" class="tooltip" data-tooltip="Norwegian (Bokmål)">
+                    <a href="/type/language/nb" class="tooltip" data-tooltip="Norwegian (Bokmål)">
                         <img src="https://twemoji.maxcdn.com/2/72x72/1f1f3-1f1f4.png" class="image">
                     </a>
                 </div>
                 
                 <div class="col-xs-3 select-lang">
-                    <a href="/language/es" class="tooltip" data-tooltip="Spanish (Spain)">
+                    <a href="type/language/es" class="tooltip" data-tooltip="Spanish (Spain)">
                         <img src="https://twemoji.maxcdn.com/2/72x72/1f1ea-1f1f8.png" class="image">
                     </a>
                 </div>
