--- a/type/languages.html
+++ b/type/languages.html
@@ -84,7 +84,7 @@
                 </div>
                 
                 <div class="col-xs-3 select-lang">
-                    <a href="type/language/es" class="tooltip" data-tooltip="Spanish (Spain)">
+                    <a href="./language/es" class="tooltip" data-tooltip="Spanish (Spain)">
                         <img src="https://twemoji.maxcdn.com/2/72x72/1f1ea-1f1f8.png" class="image">
                     </a>
                 </div>
