--- a/type/languages.html
+++ b/type/languages.html
@@ -88,6 +88,11 @@
                         <img src="https://twemoji.maxcdn.com/2/72x72/1f1ea-1f1f8.png" class="image">
                     </a>
                 </div>
+                <div class="col-xs-3 select-lang">
+                    <a href="https://diablospot.gq/" class="tooltip" data-tooltip="Home">
+                        <img src="/assets/images/profile.png" class="image">
+                    </a>
+                </div>
                 
               </div>
         </section>
