--- a/type/languages.html
+++ b/type/languages.html
@@ -89,7 +89,7 @@
                     </a>
                 </div>
                 <div class="col-xs-3 select-lang">
-                    <a href="https://diablospot.gq/" class="tooltip" data-tooltip="Home">
+                    <a href="https://www.diablospot.gq/" class="tooltip" data-tooltip="Home">
                         <img src="/assets/images/profile.png" class="image">
                     </a>
                 </div>
