--- a/index.html
+++ b/index.html
@@ -92,14 +92,7 @@
         <div class="box-container">
             <h3 class="title non-text"><i class="emoji alexcoffee"></i> Projects:</h3>
             <div class="info-container">
-                <p><a href="https://alexflipnote.dev/homepage/" target="_blank">AlexFlipnote/homepage</a>, website that can be used as a personal start page with clock and date.</p>
-                <p><a href="https://github.com/AlexFlipnote/CoffeeAPI" target="_blank">CoffeeAPI</a>, simple, yet powerful API providing random images.</p>
-                <p><a href="https://github.com/AlexFlipnote/diskspace" target="_blank">diskspace</a>, making it possible to use Linux df & du command on Windows</p>
-                <p><a href="https://github.com/xelA/discord_bot.py" target="_blank">discord_bot.py</a>, a simple discord bot that helps you get started within discord.py.</p>
-                <p><a href="https://github.com/AlexFlipnote/Discord_Theme" target="_blank">Discord_Theme</a>, discord theme that changes the CSS style</p>
-                <p><a href="https://github.com/AlexFlipnote/ModestaCSS" target="_blank">ModestaCSS</a>, a clean CSS framework made to match my website design</p>
-                <p><a href="https://typing.alexflipnote.dev/" target="_blank">Typing test</a>, how fast can you type? Find out today with a typing test!</p>
-                <p><a href="https://xela.dev/" target="_blank">xelA</a>, the only bot your Discord would ever need, it's time to ditch Mee6 and Tickets</p>
+                <p><a href="https://www.diablospot.gq/type/" target="_blank">Typing test</a>, how fast can you type? Find out today with a typing test!</p>
             </div>
         </div>
     </section>
