--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="info-container">
                 <p>
                     Hello, my name is <span class="non-text">Adri</span>, but known as <span class="emerald-text">Diablo</span> over the internet. I'm a Developer that spends time coding scripts and building websites. Been coding for around
-                    <span class="sun-flower-text" id="years-of-coding">[INSERT TIME HERE, YES]</span> now and still on the road to learn more. Current coding languages I know fair enough are <span class="emerald-text">HTML, CSS, SCSS, JavaScript, Python</span>                    and <span class="emerald-text">SQL</span>.
+                    <span class="sun-flower-text" id="years-of-coding">3 years</span> now and still on the road to learn more. Current coding languages I know fair enough are <span class="emerald-text">HTML, CSS, SCSS, JavaScript, Python</span>                    and <span class="emerald-text">SQL</span>.
                 </p>
             </div>
         </div>
