--- a/type/index.html
+++ b/type/index.html
@@ -23,9 +23,9 @@
     <meta name="revisit-after" content="2 days">
     <meta name="keywords" content="AlexFlipnote, Twitter, Developer, Github, TypingTest, Speedtest, speed, test, typing, fast, wpm, cpm, languages, multilanguage, english">
 
-    <link rel="canonical" href="https://typing.alexflipnote.dev/" />
-    <meta property="og:url" content="https://typing.alexflipnote.dev/" />
-    <meta property="og:site_name" content="AlexFlipnote" />
+    <link rel="canonical" href="https://www.diablospot.gq/type" />
+    <meta property="og:url" content="https://www.diablospot.gq/type" />
+    <meta property="og:site_name" content="DiabloSpot" />
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary" />
