--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <!-- Meta Data -->
     <meta name="theme-color" content="#14bae4">
-    <meta content="https://alexflipnote.dev/assets/images/profile.png" property="og:image" />
-    <link rel="icon" type="image/x-icon" href="https://alexflipnote.dev/assets/images/favicon.ico">
+    <meta content="assets/images/profile.png" property="og:image" />
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <meta content="Diablo" property="og:title" />
 
     <meta content="My personal homepage" property="og:description" />
