--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                     </div>
                 </section>
                 <div class="buttons">
-                    <a href="https://discord.gg/DpxkY3x" class="btn discord-dropshadow animation hover" target="_blank">Discord</a>
-                    <a href="https://github.com/AlexFlipnote" class="btn github-dropshadow animation hover" target="_blank">GitHub</a>
-                    <a href="https://twitter.com/AlexFlipnote" class="btn twitter-dropshadow animation hover" target="_blank">Twitter</a>
-                    <a href="/branding" class="btn sun-flower-dropshadow black-text animation hover">Branding</a>
-                    <a href="https://typing.alexflipnote.dev/" class="btn alizarin-dropshadow animation hover" target="_blank">Typing test</a>
+                    <a href="https://discord.gg/unb" class="btn discord-dropshadow animation hover" target="_blank">Discord</a>
+                    <a href="https://github.com/OrionVi" class="btn github-dropshadow animation hover" target="_blank">GitHub</a>
+                    <a href="https://twitter.com/OrionVi" class="btn twitter-dropshadow animation hover" target="_blank">Twitter</a>
+                    <a href="#" class="btn sun-flower-dropshadow black-text animation hover">Branding</a>
+                    <a href="https://diablospot.gq/type" class="btn alizarin-dropshadow animation hover" target="_blank">Typing test</a>
                     <a href="/cdn-cgi/l/email-protection#3d4f5252497d5c5158455b51544d535249581359584b" class="btn emerald-dropshadow animation hover">Email</a>
                 </div>
             </div>
