--- a/musical/index.html
+++ b/musical/index.html
@@ -8,7 +8,7 @@
     <meta propery="description" content="♡">
     <meta property="og:type" content="website">
     <meta property="og:image" content="assets/img/icon.png">
-    <link rel="stylesheet" href="musical/assets/css/style.css">
+    <link rel="stylesheet" href="/musical/assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.0/animate.min.css" integrity="sha512-kb1CHTNhoLzinkElTgWn246D6pX22xj8jFNKsDmVwIQo+px7n1yjJUZraVuR/ou6Kmgea4vZXZeUDbqKtXkEMg==" crossorigin="anonymous" />
     <link rel="shortcut icon" href="assets/img/icon.png">
@@ -31,9 +31,9 @@
 
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
-    <script src="musical/assets/js/app.js"></script>
-    <script src="musical/assets/js/bideo.js"></script>
-    <script src="musical/assets/js/main.js"></script>
+    <script src="/musical/assets/js/app.js"></script>
+    <script src="/musical/assets/js/bideo.js"></script>
+    <script src="/musical/assets/js/main.js"></script>
     <script>
         function ChangeMuteState() {
             var video = document.getElementById("background_video");
