--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
         gtag('config', 'UA-52771679-1');
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+        new Crate({
+          server: '757581554707988610', // SUB - SubmitUrBot
+          channel: '767066665903980594' // #www
+        })
+      </script>
 
     <title>Diablo - Page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
