--- a/bot/index.html
+++ b/bot/index.html
@@ -94,11 +94,11 @@
                                     <a class="nav-link" href="commands.html">Commands</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="https://discord.gg/sZEDPx3">Get Support</a>
+                                    <a class="nav-link" href="https://discord.gg/sZEDPx3">Support</a>
                                 </li>
                             </ul>
                             <div class="margin-20px-left sm-display-none">
-                                <a class="butn white" href="https://bit.ly/invitepurity"><i class="fab fa-discord"></i> INVITE TO DISCORD</a>
+                                <a class="butn white" href="shorturl.at/gpKX0"><i class="fab fa-discord"></i> ADD</a>
                             </div>
                         </div>
                     </nav>
