--- a/bot/index.html
+++ b/bot/index.html
@@ -94,7 +94,7 @@
                                     <a class="nav-link" href="commands.html">Commands</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="https://discord.gg/sZEDPx3">Support</a>
+                                    <a class="nav-link" href="https://discord.gg/sZEDPx3"><i class="fab fa-discord"></i>Support</a>
                                 </li>
                             </ul>
                             <div class="margin-20px-left sm-display-none">
