--- a/bot/index.html
+++ b/bot/index.html
@@ -98,7 +98,7 @@
                                 </li>
                             </ul>
                             <div class="margin-20px-left sm-display-none">
-                                <a class="butn white" href="shorturl.at/gpKX0"><i class="fab fa-discord"></i> ADD</a>
+                                <a class="butn white" href="https://shorturl.at/gpKX0"><i class="fab fa-discord"></i> ADD</a>
                             </div>
                         </div>
                     </nav>
