--- a/bot/index.html
+++ b/bot/index.html
@@ -19,15 +19,15 @@
     <meta name="author" content="dannypent">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="keywords" content="Purity Bot Discord">
-    <meta name="description" content="Purity Bot - A Multipurpose Discord bot">
+    <meta name="keywords" content="xelS Bot Discord">
+    <meta name="description" content="xelS Bot - A Multipurpose Discord bot">
     <meta property="og:image" content="http://puritybot.com/img/purity_avatar.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
     <script data-ad-client="ca-pub-3390506714110523" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" type="c81aa78a559e5ac29d52010c-text/javascript"></script>
 
-    <title>Purity Bot - Multipurpose Discord Bot</title>
+    <title>xelS Bot - Multipurpose Discord Bot</title>
 
     <link rel="shortcut icon" href="img/purity_avatar.png">
 
@@ -296,13 +296,13 @@ What makes it better for <strong>me</strong>?
                                     <div class="card-header" id="headingTwo">
                                         <h5 class="mb-0">
                                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-Most bots never let me customize stuff. Does Purity allow <strong>customization</strong>?
+Most bots never let me customize stuff. Does xelS allow <strong>customization</strong>?
 </button>
                                         </h5>
                                     </div>
                                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                                         <div class="card-body">
-                                            In short, <strong>Yes.</strong> Change everything from currency names and leveling equations to birthday alert messages and welcome messages!
+                                            In short, <strong>Yes.</strong> Change everything from rank cards background and leveling equations to welcome messages!
                                         </div>
                                     </div>
                                 </div>
@@ -369,7 +369,7 @@ Can I actually <strong>get help</strong> if something goes wrong or I have a que
             </div>
             <div class="footer-bar">
                 <div class="container">
-                    <p class="xs-font-size13">© 2020 <a href="/">Purity Bot</a></p>
+                    <p class="xs-font-size13">© 2020 <a href="/">xelS Bot</a></p>
                 </div>
             </div>
         </footer>
