--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
         <div class="box-container">
             <h3 class="title non-text"><i class="emoji alexcoffee"></i> Projects:</h3>
             <div class="info-container">
-                <p><a href="https://www.diablospot.gq/type/" target="_blank">Typing test</a>, how fast can you type? Find out today with a typing test!</p>
+                <p><a href="https://www.diablospot.gq/type/" target="_blank"><span class="non-text">Typing test</span></a>, how fast can you type? Find out today with a typing test!</p>
+            </div>
+            <div class="info-container">
+                <p><a href="https://www.diablospot.gq/musical/" target="_blank"><span class="non-text">Aesthethic page</span></a>, A muteable song page... see it yourself</p>
             </div>
         </div>
     </section>
