--- a/bot/index.html
+++ b/bot/index.html
@@ -152,8 +152,8 @@
                                 <div class="box-circle-large"></div>
                                 <div class="box-circle-small"></div>
                             </div>
-                            <h3 class="margin-10px-bottom font-size22 md-font-size20 xs-font-size18">Pet System</h3>
-                            <p class="font-size16 line-height-28">Let members adopt an animal to train, interact, and fight with!</p>
+                            <h3 class="margin-10px-bottom font-size22 md-font-size20 xs-font-size18">Good Uptime</h3>
+                            <p class="font-size16 line-height-28">xelS bot haves a good host time! 24/7!</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-12 sm-margin-20px-bottom">
@@ -174,8 +174,8 @@
                                 <div class="box-circle-large"></div>
                                 <div class="box-circle-small"></div>
                             </div>
-                            <h3 class="margin-10px-bottom font-size22 md-font-size20 xs-font-size18">Music</h3>
-                            <p class="font-size16 line-height-28 sm-font-size14 sm-line-height-24">It's less awkward when it's not completely silent so let that music play!</p>
+                            <h3 class="margin-10px-bottom font-size22 md-font-size20 xs-font-size18">Fast setup</h3>
+                            <p class="font-size16 line-height-28 sm-font-size14 sm-line-height-24">To setup welcomes or something just put the command <strong>welcome</strong></p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-12">
